force-app/main/default/objects/House__c/House__c.object-meta.xml
<CustomObject>
    <label>House</label>
    <nameField>
        <displayFormat>HO{0000}</displayFormat>
        <label>House Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>House</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>