force-app/main/default/objects/House__c/fields/Address_2__c.field-meta.xml
<CustomField>
    <fullName>Address_2__c</fullName>
    <label>Address #2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>