force-app/main/default/objects/House__c/fields/Formula_Name__c.field-meta.xml
<CustomField>
    <fullName>Formula_Name__c</fullName>
    <formula>if ( Name__c = null ,  Name , Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>House Name</label>
    <type>Text</type>
</CustomField>