force-app/main/default/objects/House__c/fields/InitialCount__c.field-meta.xml
<CustomField>
    <fullName>InitialCount__c</fullName>
    <label>InitialCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>