force-app/main/default/objects/House__c/fields/Is_This_house_Gender_Specific__c.field-meta.xml
<CustomField>
    <fullName>Is_This_house_Gender_Specific__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is This house Gender Specific</label>
    <type>Checkbox</type>
</CustomField>