force-app/main/default/objects/House__c/fields/No_Of_Room_s__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Room_s__c</fullName>
    <label>No Of Room(s) to be created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>