force-app/main/default/objects/House__c/fields/Total_No_of_Rooms__c.field-meta.xml
<CustomField>
    <fullName>Total_No_of_Rooms__c</fullName>
    <label>Total no. of rooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>