force-app/main/default/objects/House__c/fields/Total_Rooms1__c.field-meta.xml
<CustomField>
    <fullName>Total_Rooms1__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Total Rooms1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>