force-app/main/default/objects/House__c/fields/Total_Rooms__c.field-meta.xml
<CustomField>
    <fullName>Total_Rooms__c</fullName>
    <formula>IF( ISNULL( No_Of_Room_s__c ) , 1,  No_Of_Room_s__c  + 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Rooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>