force-app/main/default/objects/House__c/fields/Treatment_Center__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Center__c</fullName>
    <label>Treatment Center</label>
    <referenceTo>Treatment_Center__c</referenceTo>
    <relationshipLabel>House</relationshipLabel>
    <relationshipName>House</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>