force-app/main/default/objects/House__c/fields/Under_Maintenance_Removed__c.field-meta.xml
<CustomField>
    <fullName>Under_Maintenance_Removed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is under maintenance/removed?</label>
    <type>Checkbox</type>
</CustomField>