force-app/main/default/objects/House__c/recordTypes/House_Created.recordType-meta.xml
<RecordType>
    <fullName>House_Created</fullName>
    <active>true</active>
    <label>House Created</label>
</RecordType>