force-app/main/default/objects/House__c/listViews/All_Houses.listView-meta.xml
<ListView>
    <fullName>All_Houses</fullName>
    <columns>Formula_Name__c</columns>
    <columns>NAME</columns>
    <columns>Total_No_of_Rooms__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Houses</label>
</ListView>